# stylit

./: .gitmodules  CMakeLists.txt  README.md
python/: get_models.py
src/: logger.h  misc.cpp  misc.h  multi_scale_painter.cpp  multi_scale_painter.h  patch_distance.h  patch_server.h  quadruplet.cpp  quadruplet.h  regression.h  restricted_nnf.h  single_scale_painter.cpp  single_scale_painter.h  uniform_nnf.h  utils.h
test/: main.cpp  test_experiments.cpp  test_misc.cpp  test_patch_server.cpp  test_regression.cpp
